--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,13 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   position: relative;
-  width: 100vw;
-  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
   font-family: 'Open Sans', sans-serif;
   color: var(--primary-text-color);
   line-height: 1.5;
@@ -24,6 +27,10 @@ h2,
 h3,
 h4 {
   font-family: 'Open Sans', sans-serif !important;
+}
+
+#root {
+  height: 100%;
 }
 
 .container {
